<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reminder</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="notValid">Incorrect input</string>

</resources>
